--- a/docs/docs-ref-autogen/outlook/office.recurrence.yml
+++ b/docs/docs-ref-autogen/outlook/office.recurrence.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 914473cea1e3a939ac9fefafdf763055649632f3
-ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
+ms.openlocfilehash: e01370cf7c234bbc8f55e6b87b719c92c471cd2d
+ms.sourcegitcommit: c12dfe8b909dec25d284f5254d97bd6478823b8f
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "26647117"
+ms.lasthandoff: 12/12/2018
+ms.locfileid: "27243448"
 items:
 - uid: outlook.Office.Recurrence
   summary: >-
@@ -45,7 +45,7 @@ items:
 
 
     \[[API 集： 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: "<table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>\n\n<tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr></table>\n\n除了此签名，此方法还具有以下签名：\n\n`getAsync(callback?: (result: AsyncResult<Office.Recurrence>) => void): void;`\n#### <a name=\"examples\"></a>示例\n\n```javascript\n// This example gets the recurrence object of an appointment or meeting request item.\nOffice.context.mailbox.item.recurrence.getAsync(callback);\nfunction callback(asyncResult){\n    var context = asyncResult.context;\n    var recurrence = asyncResult.value;\n    var endDate = recurrence.seriesTime.getEndDate();\n}\n\n// The following is an example of the results of the getAsync call.\nRecurrence = {\n    \"recurrenceType\": \"weekly\",\n    \"recurrenceProperties\": {\"interval\": 2, \"days\": [\"mon\",\"thu\",\"fri\"], \"firstDayOfWeek\": \"sun\"},\n    \"seriesTime\": {seriesTimeObject}, \n    \"recurrenceTimeZone\": {\"name\": \"Pacific Standard Time\", \"offset\": -480}}\n```"
+  remarks: "<table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>\n\n<tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr></table>\n\n除了此签名，此方法还具有以下签名：\n\n`getAsync(callback?: (result: AsyncResult<Office.Recurrence>) => void): void;`\n#### <a name=\"examples\"></a>示例\n\n```javascript\n// This example gets the recurrence object of an appointment or meeting request item.\nOffice.context.mailbox.item.recurrence.getAsync(callback);\nfunction callback(asyncResult){\n    var context = asyncResult.context;\n    var recurrence = asyncResult.value;\n    if (recurrence == null) {\n        console.log(\"Non-recurring meeting\");\n        return;\n    }\n\n    console.log(JSON.stringify(recurrence));\n}\n\n// The following example shows the results of the getAsync call that retrieves the recurrence for a series.\n// NOTE: In this example, seriesTimeObject is a placeholder for the JSON representing the \n// recurrence.seriesTime property. You should use the SeriesTime object's methods to get the \n// recurrence date and time properties.\nRecurrence = {\n    \"recurrenceType\": \"weekly\",\n    \"recurrenceProperties\": {\"interval\": 2, \"days\": [\"mon\",\"thu\",\"fri\"], \"firstDayOfWeek\": \"sun\"},\n    \"seriesTime\": {seriesTimeObject}, \n    \"recurrenceTimeZone\": {\"name\": \"Pacific Standard Time\", \"offset\": -480}}\n```"
   name: getAsync(options, callback)
   fullName: getAsync
   langs:
@@ -159,7 +159,7 @@ items:
 
 
     \[[API 集： 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: "<table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadWriteItem</td></tr>\n\n<tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr>\n\n<tr><td>错误</td><td>InvalidEndTime-早于开始时间是约会结束时间。</td></tr></table>\n\n除了此签名，此方法还具有以下签名：\n\n`setAsync(recurrencePattern: Recurrence, callback?: (result: AsyncResult<void>) => void): void;`\n#### <a name=\"examples\"></a>示例\n\n```javascript\n// The following example sets the recurrence pattern of an appointment series.\nvar seriesTimeObject = new Office.SeriesTime(); \nseriesTimeObject.setStartDate(2017,10,2);  \nseriesTimeObject.setEndDate(2017,11,2); \nseriesTimeObject.setStartTime(10,30); \nseriesTimeObject.setDuration(30);\n\nvar pattern = {\n    \"seriesTime\": seriesTimeObject,\n    \"recurrenceType\": \"weekly\",\n    \"recurrenceProperties\": {\"interval\": 1, \"days\": [\"tue\", \"thu\"], \"firstDayOfWeek\": \"sun\"},\n    \"recurrenceTimeZone\": {\"name\": \"Pacific Standard Time\"}};\n\nOffice.context.mailbox.item.recurrence.setAsync(pattern, callback);\n\nfunction callback(asyncResult)\n{\n    console.log(JSON.stringify(asyncResult)); \n}\n\n//Result: This created a recurring event from November 2, 2017 to December 2, 2017\n//        at 10:30 A.M. to 11 A.M. PST every Tuesday and Thursday.\n```"
+  remarks: "<table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadWriteItem</td></tr>\n\n<tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr>\n\n<tr><td>错误</td><td>InvalidEndTime-早于开始时间是约会结束时间。</td></tr></table>\n\n除了此签名，此方法还具有以下签名：\n\n`setAsync(recurrencePattern: Recurrence, callback?: (result: AsyncResult<void>) => void): void;`\n#### <a name=\"examples\"></a>示例\n\n```javascript\n// The following example sets the recurrence pattern of an appointment series.\nvar seriesTimeObject = new Office.SeriesTime(); \nseriesTimeObject.setStartDate(2019,10,2);  \nseriesTimeObject.setEndDate(2019,11,2); \nseriesTimeObject.setStartTime(10,30); \nseriesTimeObject.setDuration(30);\n\nvar pattern = {\n    \"seriesTime\": seriesTimeObject,\n    \"recurrenceType\": \"weekly\",\n    \"recurrenceProperties\": {\"interval\": 1, \"days\": [\"tue\", \"thu\"], \"firstDayOfWeek\": \"sun\"},\n    \"recurrenceTimeZone\": {\"name\": \"Pacific Standard Time\"}};\n\nOffice.context.mailbox.item.recurrence.setAsync(pattern, callback);\n\nfunction callback(asyncResult)\n{\n    console.log(JSON.stringify(asyncResult)); \n}\n\n//Result: This created a recurring event from November 2, 2019 to December 2, 2019\n//        at 10:30 A.M. to 11 A.M. PST every Tuesday and Thursday.\n```"
   name: setAsync(recurrencePattern, options, callback)
   fullName: setAsync
   langs:
