--- a/docs/docs-ref-autogen/word/word.paragraph.yml
+++ b/docs/docs-ref-autogen/word/word.paragraph.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 700ff311350788f3b22ede922abf4a2c2d2b8b80
-ms.sourcegitcommit: 3771b97cffd6e0510fd4e9c6288db696cd0c0ca9
+ms.openlocfilehash: 6d7c92bc238efbb5a1fc6100c6e4bf9806d4668f
+ms.sourcegitcommit: c12dfe8b909dec25d284f5254d97bd6478823b8f
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/30/2018
-ms.locfileid: "26995575"
+ms.lasthandoff: 12/12/2018
+ms.locfileid: "27243469"
 items:
 - uid: word.Word.Paragraph
   summary: >-
@@ -362,7 +362,7 @@ items:
     return:
       type:
       - word.Word.RangeCollection
-      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Word.run(async (context) => {\n    // Gets the complete sentence  (as range) associated with the insertion point.\n    let sentences = context.document\n        .getSelection().getTextRanges([\".\"] /* Using the \".\" as delimiter */, false /*means without trimming spaces*/);\n    sentences.load(\"$none\");\n\n    await context.sync();\n\n    // Expands the range to the end of the paragraph to get all the complete sentences.\n    let sentencesToTheEndOfParagraph = sentences.items[0].getRange()\n        .expandTo(context.document.getSelection().paragraphs\n            .getFirst().getRange(\"End\")).getTextRanges([\".\"], false /* Don't trim spaces*/);\n    sentencesToTheEndOfParagraph.load(\"text\");\n\n    await context.sync();\n    for (let i = 0; i < sentencesToTheEndOfParagraph.items.length; i++) {\n        console.log(sentencesToTheEndOfParagraph.items[i].text);\n    }\n});\n```"
+      description: ''
     parameters:
     - id: endingMarks
       description: 必需。标点符号和/或其他结束标记作为字符串数组。
