--- a/docs/docs-ref-autogen/word/word.range.yml
+++ b/docs/docs-ref-autogen/word/word.range.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 4db913a5fe659f11b1dfd9bfb2fa661ae035430b
-ms.sourcegitcommit: 3771b97cffd6e0510fd4e9c6288db696cd0c0ca9
+ms.openlocfilehash: 804047e8fc6065ca3a1844741e3de20da14377fe
+ms.sourcegitcommit: c12dfe8b909dec25d284f5254d97bd6478823b8f
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/30/2018
-ms.locfileid: "26995484"
+ms.lasthandoff: 12/12/2018
+ms.locfileid: "27243455"
 items:
 - uid: word.Word.Range
   summary: >-
@@ -342,7 +342,7 @@ items:
     return:
       type:
       - word.Word.RangeCollection
-      description: ''
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Word.run(async (context) => {\n    // Gets the complete sentence (as range) associated with the insertion point.\n    let sentences = context.document.getSelection().getTextRanges(\n        [\".\"] /* Using the \".\" as delimiter */,\n        false /*means without trimming spaces*/);\n    sentences.load(\"$none\");\n    await context.sync();\n\n    // Expands the range to the end of the paragraph to get all the complete sentences.\n    let sentencesToTheEndOfParagraph = sentences.items[0].getRange().expandTo(\n        context.document.getSelection().paragraphs.getFirst().getRange(\"End\")).getTextRanges(\n            [\".\"],\n             false /* Don't trim spaces*/);\n    sentencesToTheEndOfParagraph.load(\"text\");\n    await context.sync();\n    \n    for (let i = 0; i < sentencesToTheEndOfParagraph.items.length; i++) {\n        console.log(sentencesToTheEndOfParagraph.items[i].text);\n    }\n});\n```"
     parameters:
     - id: endingMarks
       description: 必需。标点符号和/或其他结束标记作为字符串数组。
