--- a/docs/docs-ref-autogen/excel/excel.stylecollection.yml
+++ b/docs/docs-ref-autogen/excel/excel.stylecollection.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a2a33fce536c47bf5efa0de2147b6f5dd4df6325
-ms.sourcegitcommit: c12dfe8b909dec25d284f5254d97bd6478823b8f
+ms.openlocfilehash: 772c5560ce09199152087836ca8022b36272e3f9
+ms.sourcegitcommit: c756c5499da5aad3736cc71573ac35f9ca3d6738
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 12/12/2018
-ms.locfileid: "27243420"
+ms.lasthandoff: 12/19/2018
+ms.locfileid: "27378195"
 items:
 - uid: excel.Excel.StyleCollection
   summary: >-
-    <span data-ttu-id="accb0-101">代表一个所有样式的集合。</span><span class="sxs-lookup"><span data-stu-id="accb0-101">Represents a collection of all the styles.</span></span>
+    <span data-ttu-id="4ae69-101">代表一个所有样式的集合。</span><span class="sxs-lookup"><span data-stu-id="4ae69-101">Represents a collection of all the styles.</span></span>
 
 
-    <span data-ttu-id="accb0-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="accb0-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="4ae69-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4ae69-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: Excel.StyleCollection
   fullName: Excel.StyleCollection
   langs:
@@ -23,12 +23,15 @@ items:
   children:
   - excel.Excel.StyleCollection.add
   - excel.Excel.StyleCollection.getItem
+  - excel.Excel.StyleCollection.items
+  - excel.Excel.StyleCollection.load
+  - excel.Excel.StyleCollection.toJSON
 - uid: excel.Excel.StyleCollection.add
   summary: >-
-    <span data-ttu-id="accb0-103">向集合添加新的样式。</span><span class="sxs-lookup"><span data-stu-id="accb0-103">Adds a new style to the collection.</span></span>
+    <span data-ttu-id="4ae69-103">向集合添加新样式。</span><span class="sxs-lookup"><span data-stu-id="4ae69-103">Adds a new style to the collection.</span></span>
 
 
-    <span data-ttu-id="accb0-104">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="accb0-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="4ae69-104">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4ae69-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: add(name)
   fullName: add
   langs:
@@ -39,18 +42,18 @@ items:
     return:
       type:
       - void
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"accb0-105\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"accb0-105\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    let styles = context.workbook.styles;\n\n    // Add a new style to the style collection.\n    // Styles is in the Home tab ribbon.\n    styles.add(\"Diagonal Orientation Style\");\n          \n    let newStyle = styles.getItem(\"Diagonal Orientation Style\");\n    \n    // The \"Diagonal Orientation Style\" properties.\n    newStyle.textOrientation = 38;\n    newStyle.autoIndent = true;\n    newStyle.includeProtection = true;\n    newStyle.shrinkToFit = true;\n    newStyle.locked = false;\n    \n    await context.sync();\n\n    console.log(\"Successfully added a new style with diagonal orientation to the Home tab ribbon.\");\n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"4ae69-105\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"4ae69-105\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    let styles = context.workbook.styles;\n\n    // Add a new style to the style collection.\n    // Styles is in the Home tab ribbon.\n    styles.add(\"Diagonal Orientation Style\");\n          \n    let newStyle = styles.getItem(\"Diagonal Orientation Style\");\n    \n    // The \"Diagonal Orientation Style\" properties.\n    newStyle.textOrientation = 38;\n    newStyle.autoIndent = true;\n    newStyle.includeProtection = true;\n    newStyle.shrinkToFit = true;\n    newStyle.locked = false;\n    \n    await context.sync();\n\n    console.log(\"Successfully added a new style with diagonal orientation to the Home tab ribbon.\");\n});\n```"
     parameters:
     - id: name
-      description: <span data-ttu-id="accb0-106">要添加的样式的名称。</span><span class="sxs-lookup"><span data-stu-id="accb0-106">Name of the style to be added.</span></span>
+      description: <span data-ttu-id="4ae69-106">要添加的样式的名称。</span><span class="sxs-lookup"><span data-stu-id="4ae69-106">Name of the style to be added.</span></span>
       type:
       - string
 - uid: excel.Excel.StyleCollection.getItem
   summary: >-
-    <span data-ttu-id="accb0-107">按名称获取样式。</span><span class="sxs-lookup"><span data-stu-id="accb0-107">Gets a style by name.</span></span>
+    <span data-ttu-id="4ae69-107">按名称获取样式。</span><span class="sxs-lookup"><span data-stu-id="4ae69-107">Gets a style by name.</span></span>
 
 
-    <span data-ttu-id="accb0-108">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="accb0-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="4ae69-108">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4ae69-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: getItem(name)
   fullName: getItem
   langs:
@@ -61,9 +64,59 @@ items:
     return:
       type:
       - excel.Excel.Style
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"accb0-109\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"accb0-109\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    let styles = context.workbook.styles;\n\n    // Add a new style to the style collection.\n    // Styles is in the Home tab ribbon.\n    styles.add(\"Diagonal Orientation Style\");\n          \n    let newStyle = styles.getItem(\"Diagonal Orientation Style\");\n    \n    // The \"Diagonal Orientation Style\" properties.\n    newStyle.textOrientation = 38;\n    newStyle.autoIndent = true;\n    newStyle.includeProtection = true;\n    newStyle.shrinkToFit = true;\n    newStyle.locked = false;\n    \n    await context.sync();\n\n    console.log(\"Successfully added a new style with diagonal orientation to the Home tab ribbon.\");\n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"4ae69-109\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"4ae69-109\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    let styles = context.workbook.styles;\n\n    // Add a new style to the style collection.\n    // Styles is in the Home tab ribbon.\n    styles.add(\"Diagonal Orientation Style\");\n          \n    let newStyle = styles.getItem(\"Diagonal Orientation Style\");\n    \n    // The \"Diagonal Orientation Style\" properties.\n    newStyle.textOrientation = 38;\n    newStyle.autoIndent = true;\n    newStyle.includeProtection = true;\n    newStyle.shrinkToFit = true;\n    newStyle.locked = false;\n    \n    await context.sync();\n\n    console.log(\"Successfully added a new style with diagonal orientation to the Home tab ribbon.\");\n});\n```"
     parameters:
     - id: name
-      description: <span data-ttu-id="accb0-110">要检索的样式的名称。</span><span class="sxs-lookup"><span data-stu-id="accb0-110">Name of the style to be retrieved.</span></span>
+      description: <span data-ttu-id="4ae69-110">要检索的样式的名称。</span><span class="sxs-lookup"><span data-stu-id="4ae69-110">Name of the style to be retrieved.</span></span>
       type:
       - string
+- uid: excel.Excel.StyleCollection.items
+  summary: <span data-ttu-id="4ae69-111">获取此集合中的加载的子项目。</span><span class="sxs-lookup"><span data-stu-id="4ae69-111">Gets the loaded child items in this collection.</span></span>
+  name: items
+  fullName: items
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'readonly items: Excel.Style[];'
+    return:
+      type:
+      - Excel.Style[]
+- uid: excel.Excel.StyleCollection.load
+  summary: <span data-ttu-id="4ae69-112">队列设置命令加载指定的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="4ae69-112">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="4ae69-113">读取属性之前，必须调用"context.sync()"。</span><span class="sxs-lookup"><span data-stu-id="4ae69-113">You must call "context.sync()" before reading the properties.</span></span>
+  remarks: >-
+    <span data-ttu-id="4ae69-114">除了此签名，此方法具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="4ae69-114">In addition to this signature, this method has the following signatures:</span></span>
+
+
+    <span data-ttu-id="4ae69-115">`load(option?: { select?: string; expand?: string; }): Excel.StyleCollection`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="4ae69-115">`load(option?: { select?: string; expand?: string; }): Excel.StyleCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+
+
+    <span data-ttu-id="4ae69-116">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.StyleCollection`-仅可对集合的类型。</span><span class="sxs-lookup"><span data-stu-id="4ae69-116">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.StyleCollection` - Only available on collection types.</span></span> <span data-ttu-id="4ae69-117">它是类似于前一个签名。</span><span class="sxs-lookup"><span data-stu-id="4ae69-117">It is similar to the preceding signature.</span></span> <span data-ttu-id="4ae69-118">Option.top 指定集合项可在结果中包含的最大数目。</span><span class="sxs-lookup"><span data-stu-id="4ae69-118">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="4ae69-119">Option.skip 指定要跳过和结果中不包含的项的数目。</span><span class="sxs-lookup"><span data-stu-id="4ae69-119">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="4ae69-120">如果指定 option.top，则将跳过指定的数目的项后启动结果集。</span><span class="sxs-lookup"><span data-stu-id="4ae69-120">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+  name: load(option)
+  fullName: load
+  langs:
+  - typeScript
+  type: method
+  syntax:
+    content: 'load(option?: string | string[]): Excel.StyleCollection;'
+    return:
+      type:
+      - excel.Excel.StyleCollection
+      description: ''
+    parameters:
+    - id: option
+      description: <span data-ttu-id="4ae69-121">以逗号分隔字符串或一个指定要加载的属性的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="4ae69-121">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      type:
+      - string | string[]
+- uid: excel.Excel.StyleCollection.toJSON
+  name: toJSON()
+  fullName: toJSON
+  langs:
+  - typeScript
+  type: method
+  syntax:
+    content: 'toJSON(): Excel.Interfaces.StyleCollectionData;'
+    return:
+      type:
+      - excel.Excel.Interfaces.StyleCollectionData
+      description: ''
